separation of concern code restructure
